# MeshGrow

./: .gitignore  README.md  pyproject.toml
docs/: installation.md  pipeline.md
meshgrow/: __init__.py  cli.py  config.py  doctor.py  weights.py
meshgrow/data/: pipeline.example.yaml
meshgrow/io/: __init__.py  convert.py  resample.py  staging.py
meshgrow/pipeline/: __init__.py  combine.py  crop.py  linflonet.py  nnunet.py  runner.py  seqseg.py
meshgrow/vtk/: minimal.py
tests/: test_combine_matching.py  test_config.py  test_convert.py  test_staging.py
